# fdf

./: CMakeLists.txt  Makefile  fdf
get_next_line/: get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils_bonus.c
minilibx-linux/test/: mlx-test
src/: draw.c  fdf.h  get_next_line.h  get_next_line_utils.c  main.c  parcer.c  utils.c  utils_2.c
